x axis scrollbar fixed

--- a/global.css
+++ b/global.css
@@ -3,6 +3,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Arial, Helvetica, sans-serif";
+  overflow-x: hidden;
 }
 
 .topnav {
